Updated static form path.

--- a/UI/pages/form.hbs
+++ b/UI/pages/form.hbs
@@ -21,7 +21,7 @@ bodyClass: form
 <%= form.open %>
 /build -->
 
-<!-- build:remove --><form action="process.php" autocomplete="off" id="form"><!-- /build -->
+<!-- build:remove --><form action="thankyou.html" autocomplete="off" id="form"><!-- /build -->
 
 	<!-- build:template
 	<%= form.antiforgery %>
